z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -109,3 +109,8 @@ body {
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
+
+
+.leaflet-bottom.leaflet-left {
+  z-index: 999;
+}
